--- a/index.html
+++ b/index.html
@@ -240,45 +240,56 @@
       });
     }
 
-    document.getElementById("reportForm").addEventListener("submit", function (e) {
-      e.preventDefault();
-      const formData = new FormData(this);
-      const name = formData.get("name");
-      const phone = formData.get("phone");
-      const email = formData.get("email");
+    document.querySelector("form").addEventListener("submit", function (e) {
+  e.preventDefault();
+  const formData = new FormData(this);
+  const name = formData.get("name");
+  const phone = formData.get("phone");
+  const email = formData.get("email");
 
-      const allSpecies = Object.entries(animals).flatMap(([_, list]) => list);
+  let report = `<strong>Viltrapport från ${name}</strong><br>
+  Telefon: ${phone}<br>
+  E-post: ${email}<br><br>`;
 
-      let report = `Viltrapport från ${name}\nTelefon: ${phone}\nE-post: ${email}\n\nFällda djur:\n`;
+  for (const [groupName, speciesList] of Object.entries(animals)) {
+    const groupTitleElement = document.querySelector(`#${groupName}`).closest(".animal-group").querySelector(".group-title");
+    const groupTitle = groupTitleElement ? groupTitleElement.textContent : groupName;
 
-      allSpecies.forEach(species => {
-        const categories = ["Hondjur", "Handjur"];
-        if (["Älg", "Rådjur", "Dovhjort", "Kronhjort"].includes(species)) {
-          categories.push("Ungdjur");
-        }
+    let groupReport = "";
+    speciesList.forEach(species => {
+      const categories = ["Handjur", "Hondjur"];
+      if (["Älg", "Rådjur", "Dovhjort", "Kronhjort"].includes(species)) {
+        categories.push("Ungdjur");
+      }
 
-        let speciesReported = false;
-        let speciesLine = `- ${species}: `;
-
-        const parts = categories.map(cat => {
-          const key = `${species}_${cat}`;
-          const value = parseInt(formData.get(key)) || 0;
-          if (value > 0) {
-            speciesReported = true;
-            return `${cat.toLowerCase()} ${value}`;
-          }
-          return null;
-        }).filter(Boolean);
-
-        if (speciesReported) {
-          speciesLine += parts.join(", ");
+      const parts = categories.map(cat => {
+        const key = `${species}_${cat}`;
+        const value = parseInt(formData.get(key)) || 0;
+        if (value > 0) {
+          return `<span style="color:red">${cat} (${value})</span>`;
         } else {
-          speciesLine += "Inget rapporterat";
+          return `${cat} (0)`;
         }
-
-        report += speciesLine + "\n";
       });
+
+      groupReport += `${species}: ${parts.join(", ")}<br>`;
     });
+
+    if (groupReport.trim()) {
+      report += `<strong>${groupTitle}</strong><br>${groupReport}<br>`;
+    }
+  }
+
+  // Skapa ett dolt inputfält som innehåller HTML-versionen av rapporten
+  const hiddenInput = document.createElement("input");
+  hiddenInput.type = "hidden";
+  hiddenInput.name = "_html";
+  hiddenInput.value = report;
+  this.appendChild(hiddenInput);
+
+  this.submit(); // Skicka formuläret manuellt efter att ha lagt till det dolda fältet
+});
+
 
   </script>
 </body>
