--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         }
 
         div.innerHTML = `
-          <img src="ikoner_vvo/${speciesName}.png" alt="${speciesName}" />
+          <img src="/ikoner_vvo/${speciesName}.png" />
           <div>${speciesName}</div>
           ${inputsHtml}
         `;
